<resources>
    <string name="app_name">Merkado</string>
    <string name="home" translatable="false">الصفحة الرئيسية</string>
    <string name="departments" translatable="false">الأقسام</string>
    <string name="cart" translatable="false">العربة</string>
    <string name="offers" translatable="false">العروض</string>
    <string name="profile" translatable="false">الصفحة الشخصية</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="map_key" translatable="false">AIzaSyCzS0MC9nVVhNXPrdkD2-CikntjTW7fmS0</string>
    <string name="ads_title" translatable="false">اعلانات</string>
    <string name="most_sold" translatable="false">الأكثر مبيعا</string>
    <string name="todat_offer" translatable="false">عرض اليوم</string>
    <string name="no_internet" translatable="false">تأكد من الإتصال بالانترنت</string>
    <string name="check_connection" translatable="false">تأكد من الاتصال بالانترنت</string>
    <string name="go_shopping" translatable="false">اذهب للتسوق</string>
    <string name="pound" translatable="false">جنيه</string>
    <string name="total_sum" translatable="false">الحساب الإجمالي :</string>
    <string name="email" translatable="false">الايميل</string>
    <string name="password" translatable="false">كلمة المرور</string>
    <string name="mobile_number" translatable="false">رقم التليفون المحمول</string>
    <string name="phone_number" translatable="false">رقم التليفون الأرضي(اختياري)</string>
    <string name="confirm_password" translatable="false">تأكيد كلمة المرور</string>
    <string name="thanks_for_using" translatable="false">شكرا لاستخدامك ميركادو</string>
    <string name="apologize" translatable="false">لا يمكننا تنفيذ طلبك الأن حيث أنه خارج نطاق عملنا تابعونا سنصل إليكم قريبا</string>
    <string name="order_successfully_sent" translatable="false">تم تسجيل طلبك بنجاح</string>
    <string name="congratulation" translatable="false">مبروووووووووك حصلت على توصيل مجاني لاستخدامك كود الدعوة</string>
    <string name="final_cost" translatable="false">حسابك أصبح 300.0 جنيه فقط</string>
    <string name="you_will_be_connected" translatable="false">سيتم الاتصال بكم في أقرب وقت لتحديد موعد التوصيل</string>
    <string name="logout" translatable="false">تسجيل خروج</string>
    <string name="search_for_product" translatable="false">ابحث عن منتج...</string>
    <string name="search" translatable="false">بحث</string>
    <string-array name="item_types">
        <item>شريط</item>
        <item>علبة</item>
    </string-array>

    <string-array name="items_to_delete">
        <item>المنتجات فقط</item>
        <item>الصيدلية فقط</item>
        <item>الطلب بالكامل</item>
        <item>إلغاء الأمر</item>
    </string-array>
</resources>