<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Views.OrderSent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks_for_using"
        android:textSize="@dimen/_20ssp"
        android:layout_margin="@dimen/_7sdp"
        android:textColor="@color/home"/>
    <TextView
        android:id="@+id/apologize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20sdp"
        android:gravity="center"
        android:layout_margin="@dimen/_7sdp"
        android:text="@string/apologize"
        android:textColor="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
    <TextView
        android:id="@+id/order_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_7sdp"
        android:text="@string/order_successfully_sent"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/product_stroke"/>
        <TextView
            android:id="@+id/congrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_7sdp"
            android:text="@string/congratulation"
            android:textSize="@dimen/_20sdp"
            android:gravity="center"
            android:textColor="@color/offers"/>
        <TextView
            android:id="@+id/final_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_7sdp"
            android:text="@string/final_cost"
            android:textSize="@dimen/_20sdp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_7sdp"
            android:text="مواعيد العمل من 10.00 ص إلى 12.00 م"
            android:textSize="@dimen/_20sdp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_7sdp"
            android:text="@string/you_will_be_connected"
            android:textSize="@dimen/_20sdp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
</LinearLayout>