<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/full_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<com.facebook.shimmer.ShimmerFrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/shimmer_product_order"
    android:visibility="gone">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/order_product_shimmer"/>
        <include layout="@layout/order_product_shimmer"/>
    </LinearLayout>

</com.facebook.shimmer.ShimmerFrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl">

        <TextView
            android:id="@+id/no_connection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_internet"
            android:textSize="@dimen/_30sdp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/cart_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_above="@id/total_cost"
                    android:layout_alignParentTop="true">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/cart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        />


                </LinearLayout>


            <LinearLayout
                android:id="@+id/total_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:background="@android:color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="bottom">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="المجمـــــــــــــــــــــوع:"
                            android:textSize="@dimen/_15ssp" />

                        <TextView
                            android:id="@+id/sum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="0"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/_20ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pound"
                            android:textColor="@color/home"
                            android:textSize="@dimen/_15ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="bottom">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="الخصـــــــــــــــــــــــــم:"
                            android:textSize="@dimen/_15ssp" />

                        <TextView
                            android:id="@+id/discount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="0"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/_20ssp" />

                        <TextView
                            android:id="@+id/discount_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pound"
                            android:textColor="@color/home"
                            android:textSize="@dimen/_15ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="bottom">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="الخصم على المجموع:"
                            android:textSize="@dimen/_15ssp" />

                        <TextView
                            android:id="@+id/overall_money_dicount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="0"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/_20ssp" />

                        <TextView
                            android:id="@+id/overall_discount_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pound"
                            android:textColor="@color/home"
                            android:textSize="@dimen/_15ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="bottom">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="التوصيـــــــــــــــــــــــل:"
                            android:textSize="@dimen/_15ssp" />

                        <TextView
                            android:id="@+id/shipping_fee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="0"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/_20ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pound"
                            android:textColor="@color/home"
                            android:textSize="@dimen/_15ssp" />
                    </LinearLayout>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/points_redeem">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/discount_options1"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:layoutDirection="rtl"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="استخدم نقاطك:"
                        android:id="@+id/use_your_points1"
                        android:visibility="visible"
                        android:layout_marginStart="@dimen/_3sdp"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="شحن مجاني"
                        android:id="@+id/discount_option1"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"/>

                </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/discount_options2"
                        android:orientation="vertical"
                        android:visibility="gone"
                        android:layoutDirection="rtl"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_marginEnd="@dimen/_3sdp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="استخدم نقاطك:"
                            android:id="@+id/use_your_points2"
                            android:visibility="visible"
                            android:layout_marginStart="@dimen/_3sdp"/>
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="شحن مجاني"
                            android:id="@+id/discount_option2"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"/>

                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@android:color/darker_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_1sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:text="@string/total_sum"
                        android:id="@+id/total_sum"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_15ssp" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_toEndOf="@id/total_sum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:text="0"
                        android:layout_centerInParent="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_20ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pound"
                        android:textColor="@color/home"
                        android:layout_toEndOf="@id/total"
                        android:layout_toStartOf="@id/complete"
                        android:layout_centerInParent="true"
                        android:textSize="@dimen/_15ssp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="إتمام الطلب"
                        android:id="@+id/complete"
                        style="?buttonStyleSmall"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

